# browser-pilot

./: .dockerignore  .env.example  .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  README.zh.md  SECURITY.md  docker-compose.prod.yml  docker-compose.single-host.yml  docker-compose.yml  package-lock.json  start.sh
backend/: .gitignore  pom.xml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_fingerprint_seed.py  0003_fingerprint_profile.py  0004_browser_lang.py  0005_fingerprint_pool.py  0006_session_scoped_tokens.py  0007_browser_images.py  0008_browser_images_unique_tenant_tag.py  0009_network_egress_profiles.py  0010_remember_tokens.py  0011_remove_external_proxy_egress.py  0012_session_files.py  0013_runtime_file_capture.py  0014_session_file_archives.py  0015_agent_device_governance.py  0016_agent_device_level1_contract.py  0017_remove_implicit_initial_leases.py  0018_session_browser_runtime.py  0019_session_viewer_tickets.py  0020_view_only_viewer_tickets.py  0021_cap_agent_device_lease_ttl.py  0021_platform_control_plane.py  0022_session_runtime_placements.py  0023_runtime_capacity_control.py  0024_tenant_delete_retention.py  ce0022_runtime_image_versions.py  ce0023_persist_network_egress_config.py
backend/app/: agent_devices.py  auto_name.py  cli_template.sh  config.py  container.py  db.py  device_presets.py  download_watcher.py  edition.py  file_capture.py  file_service.py  file_store.py  file_urls.py  fingerprint.py  i18n.py  logging_config.py  main.py  models.py  network_egress.py  platform_auth.py  platform_control.py  rfb_proxy.py  runtime_control.py  runtime_provider.py  runtime_worker.py  viewer_tickets.py
backend/app/agent/: context.py  loop.py  model.py  orchestration.py  prompt.py  registry.py  types.py
backend/app/auth/: dependencies.py  jwt.py  routes.py
backend/app/routes/: account.py  agent_devices.py  browser.py  browser_images.py  chat.py  cli.py  docker.py  files.py  fingerprint_pool.py  models.py  network_egress.py  platform.py  sessions.py  settings.py  users.py
backend/app/tools/browser/: __init__.py  ax.py  scripts.py  session.py
backend/app/tools/code/: __init__.py  bash.py  file_edit.py  file_read.py  file_write.py  glob.py  grep.py
backend/app/tools/docker/: __init__.py
backend/app/tools/vision/: __init__.py  ui_detector.py
backend/src/main/resources/: application.yml  system-prompt.txt
backend/src/main/resources/scripts/: click-element.js  click-text.js  observe.js  stealth.js  triple-success-check.js
backend/tests/: test_agent_devices.py  test_auth_remember.py  test_bootstrap_response.py  test_browser_file_routes.py  test_browser_images.py  test_browser_observe.py  test_browser_session.py  test_cloak_runtime_container.py  test_config.py  test_dataset_collector.py  test_db_bootstrap.py  test_download_watcher.py  test_edition_billing_hooks.py  test_edition_hooks.py  test_ee_saas_deploy_script.py  test_file_capture.py  test_file_capture_agent.py  test_file_service.py  test_file_store.py  test_fingerprint_network.py  test_localhost_bridge.py  test_network_egress.py  test_platform_auth.py  test_platform_control.py  test_runtime_control.py  test_runtime_provider.py  test_session_network_behavior.py  test_storage_settings.py  test_ui_detector.py  test_viewer_tickets.py  test_windows_like_profile.py
backend/tools/: annotate_with_claude.py  collect_web_ui_dataset.py  evaluate_vision.py
cli/: README.md  pyproject.toml
cli/bpilot/: __init__.py  client.py  config.py  main.py
cli/nwb/: client.py  config.py  main.py
frontend/: index.html  (+5 more)
(+167 files in other folders)
