[project]
name = "browser-pilot-backend"
version = "0.1.0"
description = "browser-pilot backend — remote browser management platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "openai>=1.82.0",
    "pydantic>=2.11.0",
    "asyncpg>=0.30.0",
]

[project.optional-dependencies]
s3 = ["boto3>=1.35.0"]

[project.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
