[project]
name = "nwb-cli"
version = "0.1.0"
description = "CLI for no-window-browser — control headless browser sessions from the terminal"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.28.0",
    "rich>=13.0.0",
]

[project.scripts]
nwb = "nwb.main:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
