[project]
name = "bpilot-cli"
version = "0.1.0"
description = "CLI for browser-pilot — control headless browser sessions from the terminal"
requires-python = ">=3.10"
license = "Apache-2.0"
readme = "README.md"
keywords = ["browser", "automation", "selenium", "cli", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.28.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/NoDeskAI/browser-pilot"
Repository = "https://github.com/NoDeskAI/browser-pilot"

[project.scripts]
bpilot = "bpilot.main:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
